--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "mongoose": "^7.4.4",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.8.0",
     "react-switch": "^7.0.0",
+    "react-table": "^7.8.0",
     "tailwindcss": "3.3.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1"
